--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site wide configuration
 
-title: Site Title
+title: Dr. Phillip M. Dickens
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: Phillip M. Dickens
   avatar: dickens_cropped.jpg
-  bio: "A brief description of yourself."
+  bio: "A brief description"
   email: #emailaddress
   # Do not include the @ symbol in your Twitter username
   twitter: #username
