--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Phil Dickens
+  name: Phil E. Dog
   avatar: dickens_cropped.jpg
   bio: "A brief description of me"
   email: dickens@umcs.maine.edu
