--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ owner:
 # The following adjust the accents for your site. If you would like to further edit colors, fonts, font sizes, etc.
 # you may do so in _sass/variables.scss
 highlight-color: 'RGB(30, 30, 255)'
-lowlight-color: '#RGB(120, 120, 255)'
+lowlight-color: 'RGB(120, 120, 255)'
 
   # NOTE: If you would like your site to be licensed under a creative commons license, uncomment the 'yes' next to the type of license you wish to use.
 creative-commons:
